--- a/TechJobs6Persistent/Views/Employer/Create.cshtml
+++ b/TechJobs6Persistent/Views/Employer/Create.cshtml
@@ -4,11 +4,11 @@
 
 <h1>Add New Employer</h1>
 
-<form asp-controller="Employer" asp-action="ProcessCreateEmployerForm" method="post">
+<form asp-controller="Employer" asp-action="Create" method="post">
 
     <div class="form-group">
         <label asp-for="Name" >Employer Name</label>
-        <input asp-for="Name" />
+        <input asp-for="Name" class="form-control"/>
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
@@ -16,7 +16,7 @@
 
     <div class="form-group">
         <label asp-for="Location">Employer Location</label>
-        <input asp-for="Location" />
+        <input asp-for="Location" class="form-control"/>
         <span asp-validation-for="Location" class="text-danger"></span>
     </div>
 
