--- a/TechJobs6Persistent/Views/Job/Add.cshtml
+++ b/TechJobs6Persistent/Views/Job/Add.cshtml
@@ -1,15 +1,26 @@
 ﻿@using TechJobs6Persistent.ViewModels
+@model AddJobViewModel
 
 
 <h1>Add Job</h1>
 
 <form asp-controller="Job" asp-action="Add" method="post">
     <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" />
-        <span></span>
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+
+    <br />
+
+    <div class="form-group">
+        <label asp-for="EmployerId">Employer</label>
+        <select asp-for="EmployerId" asp-items="Model.Employers"></select>
+        <a class="btn btn-primary" asp-controller="Employer" asp-action="Create" role="button">Add New Employer</a>
+    </div>
+
     <br />
 
     <input type="submit" value="Add Job" />
 </form>
+
