commit -m “fixing jobcontroller, employer model and routine”

--- a/TechJobs6Persistent/Views/Skill/Add.cshtml
+++ b/TechJobs6Persistent/Views/Skill/Add.cshtml
@@ -7,7 +7,7 @@
     <div class="form-group">
         <label asp-for="SkillName">Skill Type: </label>
         <input asp-for="SkillName" />
-        <span asp-validation-for="SkillName"></span>
+        <span asp-validation-for="SkillName" class= "text danger"></span>
     </div>
 
     <br />
