--- a/TechJobs6Persistent/Views/Skill/AddJob.cshtml
+++ b/TechJobs6Persistent/Views/Skill/AddJob.cshtml
@@ -1,10 +1,10 @@
 ﻿@using TechJobs6Persistent.ViewModels
 @model AddSkillViewModel
 
-<h1>Add Skill to Job: @Model.Job.Name </h1>
+<h1>Add Skill to Job: @Model.Job?.Name </h1>
 
 <form asp-controller="Skill" asp-action="AddJob" method="post">
-    <input type="hidden" value="@Model.Job.Id" name="JobId" />
+    <input type="hidden" value="@Model.Job?.Id" name="JobId" />
     <div class="form-group">
         <label asp-for="SkillId">Skill</label>
         <select asp-for="SkillId" asp-items="Model.Skills"></select>
@@ -13,7 +13,7 @@
 
     <br />
 
-    <input type="submit" value="Add skill @Model.Job.Name" />
+    <input type="submit" value="Add skill @Model.Job?.Name" />
 </form>
 
 
